Changed image storage in LoRCard class and added documentation.